# FreakOTP

./: .gitignore  LICENSE  Makefile  README.md  changelog.txt  freakotp.py  freeotp-backup.json  prepare_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  rofi-otp.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
freakotp/: cli.py  config.py  freakotp.py  secret.py  sql.py  token.py
tests/: empty.db  test.db  test_cli.py  test_config.py  test_hotp.py  test_secret.py  test_totp.py
