[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 132

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["freakotp"]

[tool.coverage.report]
exclude_lines = [ "# pragma: no cover", "if TYPE_CHECKING:" ]

[tool.isort]
profile = "black"
