[metadata]
name = freakotp
version = attr: freakotp.cli.__version__
keywords = cli, otp, two-factor, totp, hotp, freeotp
description = FreakOTP is a command line two-factor authentication application
author = Andrea Bonomi
author_email = andrea.bonomi@gmail.com
url = http://github.com/andreax79/FreakOTP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Tracker = http://github.com/andreax79/FreakOTP/issues
    Documentation = https://FreakOTP.readthedocs.io/en/latest/
    Source Code = http://github.com/andreax79/FreakOTP

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires =
    appdirs
    qrcode
    click
    pzp>=0.0.21

[options.packages.find]
include = freakotp*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    freakotp = freakotp.cli:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W504
    E221
